--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
+    "react-onclickoutside": "^6.10.0",
+    "react-resizable": "^1.11.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "use-dynamic-refs": "^1.0.0",
+    "web-vitals": "^1.1.1",
+    "homepage": "http://anvalenton.github.io/makeaface"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"},
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
