--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "4.0.3",
     "use-dynamic-refs": "^1.0.0",
     "web-vitals": "^1.1.1",
-    "homepage": "http://anvalenton.github.io/makeaface"
+    "homepage": "https://anvalenton.github.io/makeaface"
   },
   "scripts": {
     "start": "react-scripts start",
