--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-resizable": "^1.11.1",
     "react-scripts": "4.0.3",
     "use-dynamic-refs": "^1.0.0",
-    "web-vitals": "^1.1.1",
-    "homepage": "https://anvalenton.github.io/makeaface"
+    "web-vitals": "^1.1.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
